

Name: Segue ChangeLog


v. 1.0.3 (Not Yet Released)
----------------------------------------------------
		
	* Change: Two new site templates: &quot;Advanced: Single Section&quot; and &quot;Advanced: Blank&quot;. (Alex Chapin)
		
	**** IMPORTANT *** Change: To create the new templates, log in as an administrator, then enter the url &quot;http://...your_segue_directory/index.php?action=update_1.0.3&quot;.
		
	* Change: Discussions now appear in-line instead of in a popup window. (Alex Chapin)
		
	* Change: Admin screens for users, classes, slots, and logs now have improved searching and pagination. (Alex Chapin)
		
	* Bug Fix: #776452 Anonymous/Unauthenticated discussions are now working. (Gabe Schine)
		
	* Bug Fix: #809335 Class groups not listed from members (Adam Franco)
		
	* Change: #804005 Editors of sections can now enable discussions for that section and select which (of the already availible editors) can post to it. (Adam Franco)
		
	* Bug Fix: #803899 Co-Teaching profs now don't see site creation, grouping, or editing links if they are not the owner for a site. They see editing links as apropriate if they are editors. (Adam Franco)
		
	* Bug Fix: #803894 User's Full Names containing apostrophes now don't throw errors when adding to the user table. (Adam Franco)
	
v. 1.0.2 (2003-09-08)
----------------------------------------------------
		
	* Change: #777065 The admin interface has been changed so that slot and their properties can be changed along side the classes and users. Custom upload limits can be set in this slot interface now instead of editing the DB directly. (Adam Franco)
		
	* Bug Fix: #802499 Story problems with the [De]Activate dates have been fixed (Adam Franco)
		
	* Bug Fix: #795587 Problems with the [De]Activate dates have been fixed (Adam Franco)
		
	* Bug Fix: #791954 The Move/Copy UI now shows the sitename to differentiate between similarly titled sites. (Adam Franco)
	
v. 1.0.1 (2003-08-08)