@@ -5,6 +5,22 @@
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.0.3</h2><h3>Not Yet Released</h3><ul>
 		<li/> Change:  
+			Permissions window now has Save/Cancel buttons at the top of the 
+			window.
+		 (<i>Adam Franco</i>)
+		<li/><span style="color: red">*** IMPORTANT ***</span> Change:  
+			Segue expects that usernames are all lower-case. Checks are in place
+			to force the creation of lowercase usernames when adding users, but 
+			if you are using a custom authentication modules, these checks may 
+			be bypassed and you should check that usernames in your user table 
+			are lower-case if you see strange problems with permissions. 
+		 (<i>Adam Franco</i>)
+		<li/> New feature:  
+			Addition of an update framework for applying database updates in
+			Segue. When templates/database updates are in a release, they
+			will appear in the &quot;Segue Updates&quot; section of the &quot;admin tools&quot;.
+		 (<i>Adam Franco</i>)
+		<li/> Change:  
 			Two new site templates: &quot;Advanced: Single Section&quot; and 
 			&quot;Advanced: Blank&quot;.
 		 (<i>Alex Chapin</i>)
